# BalanceBot

./: .clang-format  .gitignore  .gitmodules  ATmega328P.brd  ATmega328P.sch  Balance-Bot.ino  DMP_MEM.h  DMP_program.h  HBridge.asc  IMU.cpp  IMU.h  MPU6050.cpp  MPU6050.h  PID.cpp  PID.h  Stepper.cpp  Stepper.h  self_balancing_bot.ino  stepper_driver.brd  stepper_driver.sch  structures.h
Config/: CMakeLists.txt  Doxyfile  README.md
Config/include/: cmdLine.h  messages.h  serialport.h  setup.h  structures.h  tcp.h
Config/lib/: CMakeLists.txt
Config/src/: main.c
Config/src/cmdLine/: accelcmd.c  cmds.h  controlcmd.c  debugcmd.c  exitcmd.c  gyrocmd.c  heartbeatcmd.c  imucmd.c  motorcmd.c  poscmd.c  setup.c
Config/src/messages/: acknowledge.c  calibration.c  debug.c  handlers.h  heartbeat.c  imudata.c  offset.c  request.c  setup.c  structures.h
Config/src/serialport/: private.h  setup.c  transfer.c
Config/src/setup/: serial.c
Config/src/tcp/: private.h  setup.c  transfer.c
SW/: CMakeLists.txt  Doxyfile  ReadME.md
SW/include/: cmd.h  cmdlist.h  cmds.h  config.h  control.h  drivers.h  heartbeat.h  imu.h  motors.h  setup.h  stepper.h  steppers.h  system.h  tasks.h  topics.h  utilities.h
SW/lib/: CMakeLists.txt
SW/src/: cmd.c  cmdlist.c  control.c  heartbeat.c  imu.c  main.c  motors.c  setup.c  stepper.c  steppers.c  system.c  tasks.c
SW/src/cmds/: control.c  imu.c  motor.c  scan.c  uptime.c
SW/src/config/: calibration.c  control.c  debug.c  heartbeat.c  imu.c  messages.h  motors.c  offset.c  position.c  setup.c
SW/src/control/: control.c  debug.c
SW/src/drivers/: gpio.c  i2c.c  time.c  uart.c
SW/src/imu/: setup.c
SW/src/motors/: motors.c
SW/src/utilities/: cli.c  notifier.c  scheduler.c  setup_cli.c
Schematics/: ATmega328P.brd  ATmega328P.sch
